Add PostgreSQL models and Docker setup for backend

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
 DB_URL=postgresql://finance_user:finance_pass@localhost:5432/finance_db
+# For Docker Compose, DB host should be "postgres"
+# DB_URL=postgresql://finance_user:finance_pass@postgres:5432/finance_db
+SECRET_KEY=change-this-to-a-long-random-string
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=60
 
