--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.59.0",
     "@vitejs/plugin-react": "^4.3.2",
     "vite": "^5.4.11"
   }
